BUILT: WHY PAGE

--- a/why.html
+++ b/why.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="/css/main.css"/>
+  <script src="https://kit.fontawesome.com/d01e7b9f50.js" crossorigin="anonymous"></script>
   <title>BARO LANDING</title>
 </head>
 <body>
-  
+  <h1 class="hidden">Welcome to BARO LANDING!</h1>
+  <!-- Navbar goes here-->
+  <nav id="navbar">
+    <div id="navbar__line"></div>
+    <ul id="navbar__menu">
+      <li class="navbar__menu__item"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
+      <li class="navbar__menu__item selectedNav"><a href="why.html"><h6>Why BARO?</h6></a></li>
+      <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
+      <li class="navbar__menu__item"><a href="contract.html"><h6>신청서 양식</h6></a></li>
+      <li class="navbar__menu__item"><a href="#"><h6>계약서 양식</h6></a></li>
+      <li class="navbar__menu__item"><a href="book.html"><h6>문의하기</h6></a></li>
+      <li><a href=""><img src="/images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
+      <li><a href=""><img src="/images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
+    </ul>
+  </nav>
+
+  <!-- Logo goes here -->
+  <div id="logo">
+    <a href="index.html"><img src="images/" alt="Logo"></a>
+  </div>
+
+  <section id="why">
+    <h2>Why BARO 랜딩 서비스?</h2>
+    <div class="why__button">
+      <button id="review_btn"><h5>BARO 랜딩 서비스 이용 후기</h5></button>
+      <button id="pros_btn"><h5>BARO 랜딩 서비스의 만의 장점</h5></button>
+    </div>
+    <!-- Review -->
+    <div class="review__container">
+      <h3>BARO 랜딩 서비스 이용 후기</h3>
+      <div class="review__container__items">
+        <h5>Fanshawe College 학생, 심**</h5>
+        <p>한국에서 캐나다 시차가 있음에도 불구하고 한국시간에 맞춰서 매번 연락해주시고 세심하게<br>
+          신경써주셨습니다. 집도 조건과 상황에 맞게 학교 바로 앞으로 잘 구해주셔서<br>
+          잘 지내고 있습니다. 캐나다 오기전까지 세심하게 연락하며 집 계 약, 휴대폰 개통, 은행일 등 캐나다 <br>
+          도착해서 바로 이용해야 할것 들을 미리 다 준비 해주셨습니다. 도착한 후 격리 호텔에 휴대폰 유심을 <br>
+          가져다 주시는 등 많은 도움을 주셨습니다. 저는 혼자 준비해야 할게 많아서 랜딩서비스를 이용하며<br>
+          캐나다오는데 부담을 확 줄일수 있었고, 맘 편히 도착할 수 있게 되었습니다.</p>
+      </div>
+      <div class="review__container__items">
+        <h5>최**</h5>
+        <p>처음 정착 서비스라는 것을 소개 받았을 때는 왜 큰 돈을 들여서 하지? 부딪쳐가면서 하는거라고<br> 
+          생각했는데 다시 생각 해보니 혼자 지내는거라면 나 혼자 감내하면 되지만, 아이들이 그 희생을<br>
+          감수해야 한다고 생각하니 다시 한번 생각보게 되었습니다. 와이프의 안목을 믿고 BARO에<br>
+          연락을 했습니다. 공식적인 정착지원은 종료되었지만, 지난 1주일 되돌아 보니 참으로<br> 
+          많은 걸 했습니다. 혼자 힘으로 부딪히면서 했다면 아마 한 가지도 잘 하기 어려웠을 겁니다.<br>
+          앞으로도 많은 인연을 만드시겠지만, 저희 가족도 기억하여 주시고 늘 가정 내 평안과 행복이<br> 
+          함께 하기를 짐심으로 빌겠습니다. </p>
+      </div>
+      <div class="review__container__items">
+        <h5>Western University , 정**</h5>
+        <p>필자는 Western University로 유학을 가게 된 학생입니다. 원래는 학교 아파트를 구하려고 했으나<br> 
+          코로나로 인하여 수요가 몰려서 실패했습니다. 심지어 탈락 발표도 7월 말에 나서 집을 늦게 구하게<br>
+          되었습니다. 해외에서 집을 구하는 것이 참 막막하고 불안하기만 하던 중 인터넷에서 랜딩 서비스에<br>
+          대해서 알게 되어서 큰 맘먹고 신청했습니다. 결과부터 말씀드리자면 대만족이었습니다! </p>
+      </div>
+    </div>
+    <!-- Advantages -->
+    <div class="pros__container">
+      <h3>BARO 랜딩 서비스 만의 장점</h3>
+      <div class="pros__container__item">
+        <div class="pros__container__item__up">
+          <h3>“BARO <span>Community</span>에 초대 합니다"</h3>
+          <img src="images/kakaotalk.svg" alt="카카오톡 아이콘">
+        </div>
+        <p>BARO 랜딩 서비스와 함께한 고객님들 만을 위한 Community 방에 초대합니다. <br>
+          온타리오에 정착하고 난 후 서로 도움을 주고 받을 수 있는 채팅 방입니다.<br><br>
+          
+          바로 랜딩 서비스를 이용하신 고객님들은 누구나 참여 가능합니다. </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer goes here -->
+  <footer id="footer">
+    <p class="marginTop">© BAROlandingservice. All rights reserved.</p>
+  </footer>  
+
+  <script src="js/why.js" type="module" defer></script>
 </body>
 </html>
