--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     <!-- Logo goes here -->
     <div id="logo">
-      <img src="images/" alt="Logo">
+      <a href="index.html"><img src="images/" alt="Logo"></a>
     </div>
 
     <!-- Main Content goes here -->
@@ -137,10 +137,9 @@
     </section>
   
     <!-- Footer goes here -->
-    <footer id="footer__about">
+    <footer id="footer">
       <p>© BAROlandingservice. All rights reserved.</p>
     </footer>
-  </div>
 
 <script src="js/about.js" type="module" defer></script>
 </body>
