--- a/index.html
+++ b/index.html
@@ -47,14 +47,11 @@
     </section>
   
     <!-- Footer goes here -->
-    <footer id="footer">
+    <footer id="footer__landing">
       <p>© BAROlandingservice. All rights reserved.</p>
     </footer>
   </div>
 
-  
-<!-- Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="/js/main.js" type="module" defer></script>
 </body>
 </html>
