BUILT: SERVICE PAGE

--- a/why.html
+++ b/why.html
@@ -20,8 +20,8 @@
       <li class="navbar__menu__item"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
       <li class="navbar__menu__item selectedNav"><a href="why.html"><h6>Why BARO?</h6></a></li>
       <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
-      <li class="navbar__menu__item"><a href="contract.html"><h6>부가 서비스</h6></a></li>
-      <li class="navbar__menu__item"><a href="book.html"><h6>문의하기</h6></a></li>
+      <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
+      <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
       <li><a href=""><img src="/images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
       <li><a href=""><img src="/images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
     </ul>
