REPLACE: ALL IMAGES

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
     <!-- Logo goes here -->
     <div id="logo">
-      <a href="index.html"><img src="images/" alt="Logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
     </div>
 
     <!-- Main Content goes here -->
@@ -71,7 +71,7 @@
 
       <!-- Poster -->
       <div class="baro__poster">
-        <img src="" alt="포스터">
+        <img src="images/poster.png" alt="포스터">
       </div>
     </section>
   
