--- a/introduce.html
+++ b/introduce.html
@@ -29,7 +29,7 @@
 
     <!-- Logo goes here -->
     <div id="logo">
-      <a href="index.html"><img src="images/" alt="Logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
     </div>
 
     <!-- Main Content goes here -->
@@ -43,7 +43,7 @@
       </div>
       <!-- Lim -->
       <div class="lim__container">
-        <img src="" alt="">
+        <img src="images/lim.png" alt="임주영 대표님 이미지">
         <h2>임주영 대표님</h2>
         <h4>
           캐나다 런던에서 2011년부터 살아오고 있는 세 아이의 엄마입니다.<br>
@@ -60,7 +60,7 @@
       </div>
       <!-- Park -->
       <div class="park__container">
-        <img src="" alt="">
+        <img src="images/lim.png" alt="박선옥 실장님 이미지">
         <h2>박선옥 실장님</h2>
         <h4>
           안녕하세요! 바로 랜딩 박선옥 실장입니다.<br>
