--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="/css/main.css"/>
+  <link rel="stylesheet" href="css/main.css"/>
   <title>BARO LANDING</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
       </h2>
       <div class="main__bt">
         <div class="main__logo">
-          <img scr="images/" alt="로고">
+          <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
         </div>
         <p><span>다년간의 정착서비스</span> 노하우와 <span>여러 분야의 전문파트너</span>들과의 협업으로 <br>
             막막하고 걱정되는 온타리오의 첫 정착에 <span>든든한 친구</span>가 되어드리겠습니다.
@@ -51,6 +51,6 @@
     </footer>
   </div>
 
-<script src="/js/main.js" type="module" defer></script>
+<script src="js/main.js" type="module" defer></script>
 </body>
 </html>
