--- a/service.html
+++ b/service.html
@@ -29,7 +29,7 @@
 
     <!-- Logo goes here -->
     <div id="logo">
-      <a href="index.html"><img src="images/" alt="Logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
     </div>
 
     <!-- Main Content goes here -->
