--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
+  <script src="https://kit.fontawesome.com/d01e7b9f50.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css"/>
   <title>BARO LANDING</title>
 </head>
@@ -23,6 +24,30 @@
         <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
         <li><a href=""><img src="/images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
         <li><a href=""><img src="/images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
+      </ul>
+    </nav>
+
+    <!-- tablet version -->
+    <div class="navBtn">
+      <p>더 많은 정보를 위해 화살표를 클릭 해주세요.</p>
+      <i class="fa-solid fa-angles-down openBtn"></i>
+    </div>
+    <nav id="navbar__tablet">
+      <ul id="navbar__menu__tablet">
+        <li class="navbar__tablet__item"><a href="index.html"><img src="images/white_logo.png" alt="네비게이션 로고"></a></li>
+        <li class="navbar__tablet__item"><a href="about.html"><h3>정착 랜딩 알아보기</h3></a></li>
+        <li class="navbar__tablet__item"><a href="why.html"><h3>Why BARO?</h3></a></li>
+        <li class="navbar__tablet__item"><a href="introduce.html"><h3>회사소개</h3></a></li>
+        <li class="navbar__tablet__item"><a href="service.html"><h3>부가 서비스</h3></a></li>
+        <li class="navbar__tablet__item"><a href="contact.html"><h3>문의하기</h3></a></li>
+        <div class="tablet__social">
+          <a href=""><img src="/images/kakao_icon.svg" alt="카카오톡 로고"></a>
+          <a href=""><img src="/images/instagram_icon.svg" alt="인스타그램 로고"></a>
+        </div>
+        <div class="closebtnCon">
+          <i class="fa-solid fa-chevron-up closeBtn"></i>
+          <p>홈페이지로 돌아가기</p>
+        </div>
       </ul>
     </nav>
 
@@ -43,6 +68,11 @@
         <img src="images/naver_logo.svg" alt="네이버 로고">
         <small>BARO 랜딩 서비스 블로그 방문하기</small>
       </div>
+
+      <div class="main__tablet__naver">
+        <button><a><h4>정착 랜딩 알아보기</h4></a></button>
+        <button><a><h4>NAVER Blog</h4></a></button>
+      </div>
     </section>
   
     <!-- Footer goes here -->
@@ -51,6 +81,6 @@
     </footer>
   </div>
 
-<script src="js/main.js" type="module" defer></script>
+<script src="js/landing.js" type="module" defer></script>
 </body>
 </html>
