--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
         <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
         <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
-        <li><a href=""><img src="/images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
-        <li><a href=""><img src="/images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
+        <li><a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
+        <li><a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
       </ul>
     </nav>
 
@@ -41,8 +41,8 @@
         <li class="navbar__tablet__item"><a href="service.html"><h3>부가 서비스</h3></a></li>
         <li class="navbar__tablet__item"><a href="contact.html"><h3>문의하기</h3></a></li>
         <div class="tablet__social">
-          <a href=""><img src="/images/kakao_icon.svg" alt="카카오톡 로고"></a>
-          <a href=""><img src="/images/instagram_icon.svg" alt="인스타그램 로고"></a>
+          <a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
+          <a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
         </div>
         <div class="closebtnCon">
           <i class="fa-solid fa-chevron-up closeBtn"></i>
@@ -58,7 +58,7 @@
       </h2>
       <div class="main__bt">
         <div class="main__logo">
-          <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
+          <a href="index.html"><img src="images/logo_landing.png" alt="Logo"></a>
         </div>
         <p><span>다년간의 정착서비스</span> 노하우와 <span>여러 분야의 전문파트너</span>들과의 협업으로 <br>
             막막하고 걱정되는 온타리오의 첫 정착에 <span>든든한 친구</span>가 되어드리겠습니다.
