COMPLETE: TABLET VERSION

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <nav id="navbar">
     <div id="navbar__line"></div>
     <ul id="navbar__menu">
-      <li class="navbar__menu__item"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
+      <li class="navbar__menu__item selectedNav"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
       <li class="navbar__menu__item"><a href="why.html"><h6>Why BARO?</h6></a></li>
       <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
       <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
@@ -173,6 +173,11 @@
         <p>* 입국하는 본인 및 동반 가족 여권 복사, 학교 입학 증명서, 학생 Visa 허가서 제출 요망 </p>
       </div>
     </section>
+
+    <!-- Chat -->
+    <div id="chat">
+      <button><a href="contact.html"><img src="images/chat.png"></a></button>
+    </div>
   
     <!-- Footer goes here -->
     <footer id="footer">
