--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     </nav>
 
     <!-- Main Content goes here -->
-    <section id="main">
+    <section id="main" class="notshowing">
       <h2>정식 비지니스 등록넘버를 가진 <br>
           캐나다 온타리오 정착 (랜딩) 서비스 업체
       </h2>
-      <div class="main__bt">
+      <div class="main__bt notshowing">
         <div class="main__logo">
           <a href="index.html"><img src="images/logo_landing.png" alt="Logo"></a>
         </div>
@@ -70,10 +70,15 @@
       </div>
 
       <div class="main__tablet__naver">
-        <button><a><h4>정착 랜딩 알아보기</h4></a></button>
+        <button><a href="about.html"><h4>정착 랜딩 알아보기</h4></a></button>
         <button><a><h4>NAVER Blog</h4></a></button>
       </div>
     </section>
+
+    <!-- Chat -->
+    <div id="chat">
+      <button><a href="contact.html"><img src="images/chat.png"></a></button>
+    </div>
   
     <!-- Footer goes here -->
     <footer id="footer__landing">
