--- a/introduce.html
+++ b/introduce.html
@@ -19,7 +19,7 @@
     <ul id="navbar__menu">
       <li class="navbar__menu__item"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
       <li class="navbar__menu__item"><a href="why.html"><h6>Why BARO?</h6></a></li>
-      <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
+      <li class="navbar__menu__item selectedNav"><a href="introduce.html"><h6>회사소개</h6></a></li>
       <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
       <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
       <li><a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
@@ -70,16 +70,16 @@
         <img src="images/lim.png" alt="임주영 대표님 이미지">
         <h2>임주영 대표님</h2>
         <h4>
-          캐나다 런던에서 2011년부터 살아오고 있는 세 아이의 엄마입니다.<br>
-          이민은 2008년 1월에 알버타주로 오게 되었습니다. 그때 큰 아이가 세 살 반이었는데 <br>
-          벌써 올해 대학생이 되었네요. 그 후 벤쿠버, P.E.I (빨강머리앤의 고향)를 거쳐 <br>
-          온타리오 런던에서 가장 오래살고 있어요. <br>
-          2012년부터 2013년에는 런던카톨릭 스쿨보드 한국어 학교 교장을 맡아 <br>
-          4명의 선생님들과 함께 아이들을 가르쳤습니다. 2017년 어느 날 전부터 운영해 오던 <br>
-          개인 블로그에 랜딩 서비스 시작을 알렸습니다.<br>
-          그런데 신기하게도 한 분 두 분 연락이 오기 시작했어요. 첫 손님은 캐나다 이민과 런던 정착을 사전 답사를 위해 <br>
-          아일랜드 더블린에서 오신 신혼부부셨어요. 랜딩 손님들을 만나며 저는 더 많이 행복해지기 시작했습니다^^<br>
-          지금은 랜딩서비스를 할 수 있는 것이 참 감사하고, 기쁘고 행복하게 생활하고 있습니다.<br>
+          캐나다 런던에서 2011년부터 살아오고 있는 세 아이의 엄마입니다.
+          이민은 2008년 1월에 알버타주로 오게 되었습니다. 그때 큰 아이가 세 살 반이었는데 
+          벌써 올해 대학생이 되었네요. 그 후 벤쿠버, P.E.I (빨강머리앤의 고향)를 거쳐 
+          온타리오 런던에서 가장 오래살고 있어요. 
+          2012년부터 2013년에는 런던카톨릭 스쿨보드 한국어 학교 교장을 맡아 
+          4명의 선생님들과 함께 아이들을 가르쳤습니다. 2017년 어느 날 전부터 운영해 오던 
+          개인 블로그에 랜딩 서비스 시작을 알렸습니다.
+          그런데 신기하게도 한 분 두 분 연락이 오기 시작했어요. 첫 손님은 캐나다 이민과 런던 정착을 사전 답사를 위해 
+          아일랜드 더블린에서 오신 신혼부부셨어요. 랜딩 손님들을 만나며 저는 더 많이 행복해지기 시작했습니다^^
+          지금은 랜딩서비스를 할 수 있는 것이 참 감사하고, 기쁘고 행복하게 생활하고 있습니다.
         </h4>
       </div>
       <!-- Park -->
@@ -87,19 +87,24 @@
         <img src="images/lim.png" alt="박선옥 실장님 이미지">
         <h2>박선옥 실장님</h2>
         <h4>
-          안녕하세요! 바로 랜딩 박선옥 실장입니다.<br>
-          8개월 아이를 키우고 있던 어느 날, 제 얼굴만 봐도 꺄르르 웃는 아이의 웃음소리를 들으며 <br>
-          '앞으로 우리 세 식구는 어떻게 하면 더 행복하게 잘 살 수 있을까?'라는 생각으로 시작을 해 그로부터 1년 4개월 후, <br>
-          17년 5월에 갓 두 돌 지난 아이를 데리고 캐나다 런던으로 정착하였습니다. <br>
-          오시는분들 대부분이 같은 고민의 결정일 거라고 생각됩니다. <br>
-          런던에 살면서 겪었던 것들, 겪지 않았으면 좋았을 것들을 공유하여 보다 더 잘 자리 잡으실 수 있도록 도와드리겠습니다. <br>
-          현재는 팬쇼 졸업 후 열심히 일하는 남편과 2학년인 첫째, <br>
-          캐나다에서 태어난 지 두돌이 되어가는 둘째와 행복하게 잘 지내고 있습니다! <br>
-          아는 사람 없는 낯선 곳에서 모든 것을 해결하고 처리해야 하는 부담감을 덜어드리고, <br>
+          안녕하세요! 바로 랜딩 박선옥 실장입니다.
+          8개월 아이를 키우고 있던 어느 날, 제 얼굴만 봐도 꺄르르 웃는 아이의 웃음소리를 들으며 
+          '앞으로 우리 세 식구는 어떻게 하면 더 행복하게 잘 살 수 있을까?'라는 생각으로 시작을 해 그로부터 1년 4개월 후, 
+          17년 5월에 갓 두 돌 지난 아이를 데리고 캐나다 런던으로 정착하였습니다. 
+          오시는분들 대부분이 같은 고민의 결정일 거라고 생각됩니다. 
+          런던에 살면서 겪었던 것들, 겪지 않았으면 좋았을 것들을 공유하여 보다 더 잘 자리 잡으실 수 있도록 도와드리겠습니다. 
+          현재는 팬쇼 졸업 후 열심히 일하는 남편과 2학년인 첫째, 
+          캐나다에서 태어난 지 두돌이 되어가는 둘째와 행복하게 잘 지내고 있습니다! 
+          아는 사람 없는 낯선 곳에서 모든 것을 해결하고 처리해야 하는 부담감을 덜어드리고, 
           런던에서의 경험 및 노하우를 전해드려 정착 하시는 동안 마음 편히 서비스 받으실 수 있도록 노력하겠습니다.
         </h4>
       </div>
     </section>
+
+    <!-- Chat -->
+    <div id="chat">
+      <button><a href="contact.html"><img src="images/chat.png"></a></button>
+    </div>
   
     <!-- Footer goes here -->
     <footer id="footer">
