--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <li class="navbar__menu__item"><a href="why.html"><h6>Why BARO?</h6></a></li>
       <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
       <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
-      <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
+      <li class="navbar__menu__item selectedNav"><a href="contact.html"><h6>문의하기</h6></a></li>
       <li><a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
       <li><a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
     </ul>
@@ -80,6 +80,10 @@
             <input type="text" name="email">
           </div>
         </div>
+        <div class="contact__box__tablet">
+          <label>이메일</label>
+          <input type="text" name="email">
+        </div>
         <div class="contact__box__second">
           <label>희망 시기</label>
           <input type="text" name="date" placeholder="****년 **월 **일 형식으로 입력해 주세요.">
@@ -98,6 +102,11 @@
         <img src="images/poster.png" alt="포스터">
       </div>
     </section>
+
+    <!-- Chat -->
+    <div id="chat">
+      <button><a href="contact.html"><img src="images/chat.png"></a></button>
+    </div>
   
     <!-- Footer goes here -->
     <footer id="footer">
