--- a/why.html
+++ b/why.html
@@ -18,7 +18,7 @@
     <div id="navbar__line"></div>
     <ul id="navbar__menu">
       <li class="navbar__menu__item"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
-      <li class="navbar__menu__item"><a href="why.html"><h6>Why BARO?</h6></a></li>
+      <li class="navbar__menu__item selectedNav"><a href="why.html"><h6>Why BARO?</h6></a></li>
       <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
       <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
       <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
@@ -67,28 +67,28 @@
       <h3>BARO 랜딩 서비스 이용 후기</h3>
       <div class="review__container__items">
         <h5>Fanshawe College 학생, 심**</h5>
-        <p>한국에서 캐나다 시차가 있음에도 불구하고 한국시간에 맞춰서 매번 연락해주시고 세심하게<br>
-          신경써주셨습니다. 집도 조건과 상황에 맞게 학교 바로 앞으로 잘 구해주셔서<br>
-          잘 지내고 있습니다. 캐나다 오기전까지 세심하게 연락하며 집 계 약, 휴대폰 개통, 은행일 등 캐나다 <br>
-          도착해서 바로 이용해야 할것 들을 미리 다 준비 해주셨습니다. 도착한 후 격리 호텔에 휴대폰 유심을 <br>
-          가져다 주시는 등 많은 도움을 주셨습니다. 저는 혼자 준비해야 할게 많아서 랜딩서비스를 이용하며<br>
+        <p>한국에서 캐나다 시차가 있음에도 불구하고 한국시간에 맞춰서 매번 연락해주시고 세심하게
+          신경써주셨습니다. 집도 조건과 상황에 맞게 학교 바로 앞으로 잘 구해주셔서
+          잘 지내고 있습니다. 캐나다 오기전까지 세심하게 연락하며 집 계 약, 휴대폰 개통, 은행일 등 캐나다 
+          도착해서 바로 이용해야 할것 들을 미리 다 준비 해주셨습니다. 도착한 후 격리 호텔에 휴대폰 유심을 
+          가져다 주시는 등 많은 도움을 주셨습니다. 저는 혼자 준비해야 할게 많아서 랜딩서비스를 이용하며
           캐나다오는데 부담을 확 줄일수 있었고, 맘 편히 도착할 수 있게 되었습니다.</p>
       </div>
       <div class="review__container__items">
         <h5>최**</h5>
-        <p>처음 정착 서비스라는 것을 소개 받았을 때는 왜 큰 돈을 들여서 하지? 부딪쳐가면서 하는거라고<br> 
-          생각했는데 다시 생각 해보니 혼자 지내는거라면 나 혼자 감내하면 되지만, 아이들이 그 희생을<br>
-          감수해야 한다고 생각하니 다시 한번 생각보게 되었습니다. 와이프의 안목을 믿고 BARO에<br>
-          연락을 했습니다. 공식적인 정착지원은 종료되었지만, 지난 1주일 되돌아 보니 참으로<br> 
-          많은 걸 했습니다. 혼자 힘으로 부딪히면서 했다면 아마 한 가지도 잘 하기 어려웠을 겁니다.<br>
-          앞으로도 많은 인연을 만드시겠지만, 저희 가족도 기억하여 주시고 늘 가정 내 평안과 행복이<br> 
+        <p>처음 정착 서비스라는 것을 소개 받았을 때는 왜 큰 돈을 들여서 하지? 부딪쳐가면서 하는거라고 
+          생각했는데 다시 생각 해보니 혼자 지내는거라면 나 혼자 감내하면 되지만, 아이들이 그 희생을
+          감수해야 한다고 생각하니 다시 한번 생각보게 되었습니다. 와이프의 안목을 믿고 BARO에
+          연락을 했습니다. 공식적인 정착지원은 종료되었지만, 지난 1주일 되돌아 보니 참으로 
+          많은 걸 했습니다. 혼자 힘으로 부딪히면서 했다면 아마 한 가지도 잘 하기 어려웠을 겁니다.
+          앞으로도 많은 인연을 만드시겠지만, 저희 가족도 기억하여 주시고 늘 가정 내 평안과 행복이 
           함께 하기를 짐심으로 빌겠습니다. </p>
       </div>
       <div class="review__container__items">
         <h5>Western University , 정**</h5>
-        <p>필자는 Western University로 유학을 가게 된 학생입니다. 원래는 학교 아파트를 구하려고 했으나<br> 
-          코로나로 인하여 수요가 몰려서 실패했습니다. 심지어 탈락 발표도 7월 말에 나서 집을 늦게 구하게<br>
-          되었습니다. 해외에서 집을 구하는 것이 참 막막하고 불안하기만 하던 중 인터넷에서 랜딩 서비스에<br>
+        <p>필자는 Western University로 유학을 가게 된 학생입니다. 원래는 학교 아파트를 구하려고 했으나 
+          코로나로 인하여 수요가 몰려서 실패했습니다. 심지어 탈락 발표도 7월 말에 나서 집을 늦게 구하게
+          되었습니다. 해외에서 집을 구하는 것이 참 막막하고 불안하기만 하던 중 인터넷에서 랜딩 서비스에
           대해서 알게 되어서 큰 맘먹고 신청했습니다. 결과부터 말씀드리자면 대만족이었습니다! </p>
       </div>
     </div>
@@ -107,6 +107,11 @@
       </div>
     </div>
   </section>
+
+  <!-- Chat -->
+  <div id="chat">
+    <button><a href="contact.html"><img src="images/chat.png"></a></button>
+  </div>
 
   <!-- Footer goes here -->
   <footer id="footer">
