COMPLETE: MEDIA QUERY MOBILE VERSION

--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,10 @@
     <!-- Main Content goes here -->
     <section id="contact">
       <h2>상담 신청</h2>
-      <h4>BARO 랜딩 서비스 에 방문해주셔서 감사합니다.<br>
+      <h4 class="mobileDisNo">BARO 랜딩 서비스 에 방문해주셔서 감사합니다.<br>
         아래 항목을 기재하여 전송해 주시면 담당자가 빠른 시간 안에 답변해드리겠습니다.</h4>
+        <h4 class="mobileDisYes">BARO 랜딩 서비스 에<br> 방문해주셔서 감사합니다.<br><br>
+          아래 항목을 기재하여 전송해 주시면 담당자가<br> 빠른 시간 안에 답변해드리겠습니다.</h4>
       <p>* 1회 무료상담 (카톡, 전화, 이메일 포함)<br>
         * 상담 후 개별적 랜딩서비스 상세 내역을 보내드립니다. </p>
 
