--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
         <div class="main__logo">
           <a href="index.html"><img src="images/logo_landing.png" alt="Logo"></a>
         </div>
-        <p><span>다년간의 정착서비스</span> 노하우와 <span>여러 분야의 전문파트너</span>들과의 협업으로 <br>
+        <p class="tabletDisno"><span>다년간의 정착서비스</span> 노하우와 <span>여러 분야의 전문파트너</span>들과의 협업으로<br>     
             막막하고 걱정되는 온타리오의 첫 정착에 <span>든든한 친구</span>가 되어드리겠습니다.
+        </p>
+        <p><span>다년간의 정착서비스</span> 노하우와 <span>여러 분야의 전문파트너</span>들과의 협업으로   
+          막막하고 걱정되는 온타리오의 첫 정착에 <span>든든한 친구</span>가 되어드리겠습니다.
         </p>
       </div>
       <div class="main__naver__logo">
