--- a/why.html
+++ b/why.html
@@ -100,10 +100,15 @@
           <h3>“BARO <span>Community</span>에 초대 합니다"</h3>
           <img src="images/kakaotalk.svg" alt="카카오톡 아이콘">
         </div>
-        <p>BARO 랜딩 서비스와 함께한 고객님들 만을 위한 Community 방에 초대합니다. <br>
+        <p class="mobileDisNo">BARO 랜딩 서비스와 함께한 고객님들 만을 위한 Community 방에 초대합니다. <br>
           온타리오에 정착하고 난 후 서로 도움을 주고 받을 수 있는 채팅 방입니다.<br><br>
           
           바로 랜딩 서비스를 이용하신 고객님들은 누구나 참여 가능합니다. </p>
+
+          <p class="mobileDisYes">BARO 랜딩 서비스와 함께한 고객님들 만을 위한 Community 방에 초대합니다.
+            온타리오에 정착하고 난 후 서로 도움을 주고 받을 수 있는 채팅 방입니다.<br><br>
+            
+            바로 랜딩 서비스를 이용하신 고객님들은 누구나 참여 가능합니다. </p>
       </div>
     </div>
   </section>
