--- a/introduce.html
+++ b/introduce.html
@@ -59,7 +59,9 @@
     <!-- Main Content goes here -->
     <section id="introduce">
       <h2>회사소개</h2>
-      <h3>“지구 반대편에서 얼굴 한번 본 적 없는 저희를 믿고 <br>
+      <h3 class="mobileDisNo">“지구 반대편에서 얼굴 한번 본 적 없는 저희를 믿고 <br>
+        캐나다 정착을 맡겨주셔서 감사드립니다.”</h3>
+      <h3 class="mobileDisYes">“지구 반대편에서 얼굴 한번 본 적 없는 저희를 믿고
         캐나다 정착을 맡겨주셔서 감사드립니다.”</h3>
       <div class="introduce__button">
         <button id="lim_btn"><h5>임주영 대표님</h5></button>
