FINALIZED: HTML, CSS PART

--- a/introduce.html
+++ b/introduce.html
@@ -86,7 +86,7 @@
       </div>
       <!-- Park -->
       <div class="park__container">
-        <img src="images/lim.png" alt="박선옥 실장님 이미지">
+        <img src="images/park.png" alt="박선옥 실장님 이미지">
         <h2>박선옥 실장님</h2>
         <h4>
           안녕하세요! 바로 랜딩 박선옥 실장입니다.
