--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="images/lim.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
@@ -67,35 +68,36 @@
         * 상담 후 개별적 랜딩서비스 상세 내역을 보내드립니다. </p>
 
         <!-- Contact Box -->
-      <div class="contact__container">
+      <div id="app" class="contact__container">
+        <!-- <h4 class="missing-field__text">모든 칸을 채워주세요.</h4> -->
         <div class="contact__box__first">
           <div class="contact__box__first__item">
             <label>이름</label>
-            <input type="text" name="name">
+            <input type="text" name="name" ref="name" v-model="name">
           </div>
           <div class="contact__box__first__item">
             <label>전화번호</label>
-            <input type="text" name="phone">
+            <input type="text" name="phone" ref="phone" v-model="phone">
           </div>
           <div class="contact__box__first__item">
             <label>이메일</label>
-            <input type="text" name="email">
+            <input type="text" name="email" ref="email" v-model="email">
           </div>
         </div>
         <div class="contact__box__tablet">
           <label>이메일</label>
-          <input type="text" name="email">
+          <input type="text" name="email" ref="email" v-model="email">
         </div>
         <div class="contact__box__second">
           <label>희망 시기</label>
-          <input type="text" name="date" placeholder="****년 **월 **일 형식으로 입력해 주세요.">
+          <input type="text" name="date" ref="date" v-model="date" placeholder="****년 **월 **일 형식으로 입력해 주세요.">
         </div>
         <div class="contact__box__last">
           <label>상담 내용</label>
-          <input type="text" name="content">
+          <input type="text" name="content" ref="content" v-model="content">
         </div>
         <div class="submitBtn">
-          <button class="contactBtn"><h4>무료 상담 신청</h4></button>
+          <button @click="tryLogIn" class="contactBtn"><h4>무료 상담 신청</h4></button>
         </div>
       </div>
 
@@ -115,6 +117,7 @@
       <p>© BAROlandingservice. All rights reserved.</p>
     </footer>
 
-<script src="js/contact.js" type="module" defer></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="js/contact.js" type="module" defer></script>
 </body>
 </html>
