--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/main.css"/>
   <script src="https://kit.fontawesome.com/d01e7b9f50.js" crossorigin="anonymous"></script>
+</head>
   <title>BARO LANDING</title>
 </head>
 <body>
@@ -67,40 +68,48 @@
       <p>* 1회 무료상담 (카톡, 전화, 이메일 포함)<br>
         * 상담 후 개별적 랜딩서비스 상세 내역을 보내드립니다. </p>
 
+      <div id="add">
+        <div class="success__text">
+          <h5 class="sucText">저희 서비스에 관심을 가져주셔서 감사합니다! 담당자가 곧 연락드리겠습니다!</h5>
+        </div>
+        <div class="error__text">
+          <h5 class="errorText">전송에 실패하였습니다. 다시 한 번 시도해주세요.</h5>
+        </div>
         <!-- Contact Box -->
-      <div id="app" class="contact__container">
-        <!-- <h4 class="missing-field__text">모든 칸을 채워주세요.</h4> -->
-        <div class="contact__box__first">
-          <div class="contact__box__first__item">
-            <label>이름</label>
-            <input type="text" name="name" ref="name" v-model="name">
+        <form class="contact__container" action="send.php" method="POST" id="mail-form" novalidate>
+          <div class="contact__box__first">
+            <div class="contact__box__first__item">
+              <label for="name">이름</label>
+              <input type="text" name="name" id="name" required> 
+              <span class="error" aria-live="polite"></span>
+            </div>
+            <div class="contact__box__first__item">
+              <label>전화번호</label>
+              <input type="text" name="phone" id="phone" required>
+            </div>
+            <div class="contact__box__first__item">
+              <label>이메일</label>
+              <input type="text" name="email" id="email" required>
+            </div>
           </div>
-          <div class="contact__box__first__item">
-            <label>전화번호</label>
-            <input type="text" name="phone" ref="phone" v-model="phone">
-          </div>
-          <div class="contact__box__first__item">
+          <div class="contact__box__tablet">
             <label>이메일</label>
-            <input type="text" name="email" ref="email" v-model="email">
+            <input type="text" name="email" id="email" required>
           </div>
-        </div>
-        <div class="contact__box__tablet">
-          <label>이메일</label>
-          <input type="text" name="email" ref="email" v-model="email">
-        </div>
-        <div class="contact__box__second">
-          <label>희망 시기</label>
-          <input type="text" name="date" ref="date" v-model="date" placeholder="****년 **월 **일 형식으로 입력해 주세요.">
-        </div>
-        <div class="contact__box__last">
-          <label>상담 내용</label>
-          <input type="text" name="content" ref="content" v-model="content">
-        </div>
-        <div class="submitBtn">
-          <button @click="tryLogIn" class="contactBtn"><h4>무료 상담 신청</h4></button>
-        </div>
+          <div class="contact__box__second">
+            <label>희망 시기</label>
+            <input type="text" name="date" id="date" placeholder="****년 **월 **일 형식으로 입력해 주세요." required>
+          </div>
+          <div class="contact__box__last">
+            <label>상담 내용</label>
+            <input type="text" name="content" id="content" cols="30" rows="10" required>
+          </div>
+          <div class="submitBtn">
+            <button @click.prevent="processMail" type="submit" class="contactBtn"><h4>무료 상담 신청</h4></button>
+          </div>
+        </form>
       </div>
-
+        
       <!-- Poster -->
       <div class="baro__poster">
         <img src="images/poster.png" alt="포스터">
