--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <script src="https://kit.fontawesome.com/d01e7b9f50.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css"/>
   <title>BARO LANDING</title>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'ko'}, 'google_translate_element');
+    }
+  </script>
 </head>
 <body>
   <h1 class="hidden">Welcome to BARO LANDING!</h1>
