--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/main.css"/>
   <script src="https://kit.fontawesome.com/d01e7b9f50.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'ko'}, 'google_translate_element');
+    }
+  </script>
 </head>
   <title>BARO LANDING</title>
 </head>
 <body>
+  <!-- <div id="google_translate_element"></div> -->
   <h1 class="hidden">Welcome to BARO LANDING!</h1>
   <!-- Navbar goes here-->
   <nav id="navbar">
