--- a/why.html
+++ b/why.html
@@ -12,9 +12,9 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'ko'}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
     }
-  </script>
+    </script>
   <title>BARO LANDING</title>
 </head>
 <body>
@@ -22,6 +22,7 @@
   <!-- Navbar goes here-->
   <nav id="navbar">
     <div id="navbar__line"></div>
+    <div id="google_translate_element" class="transBox"></div>
     <ul id="navbar__menu">
       <li class="navbar__menu__item"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
       <li class="navbar__menu__item selectedNav"><a href="why.html"><h6>Why BARO?</h6></a></li>
@@ -39,7 +40,6 @@
     <i class="fa-solid fa-angles-down openBtn"></i>
   </div>
   <nav id="navbar__tablet">
-    <ul id="navbar__menu__tablet">
       <li class="navbar__tablet__item"><a href="index.html"><img src="images/white_logo.png" alt="네비게이션 로고"></a></li>
       <li class="navbar__tablet__item"><a href="about.html"><h3>정착 랜딩 알아보기</h3></a></li>
       <li class="navbar__tablet__item"><a href="why.html"><h3>Why BARO?</h3></a></li>
