--- a/service.html
+++ b/service.html
@@ -13,15 +13,16 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'ko'}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
     }
-  </script>
+    </script>
 </head>
 <body>
   <h1 class="hidden">Welcome to BARO LANDING!</h1>
   <!-- Navbar goes here-->
   <nav id="navbar">
     <div id="navbar__line"></div>
+    <div id="google_translate_element" class="transBox"></div>
     <ul id="navbar__menu">
       <li class="navbar__menu__item"><a href="about.html"><h6>정착 랜딩 알아보기</h6></a></li>
       <li class="navbar__menu__item"><a href="why.html"><h6>Why BARO?</h6></a></li>
