--- a/why.html
+++ b/why.html
@@ -18,7 +18,7 @@
   <title>BARO LANDING</title>
 </head>
 <body>
-  <div id="google_translate_element" class="transBox"></div>s
+  <div id="google_translate_element" class="transBox"></div>
   <h1 class="hidden">Welcome to BARO LANDING!</h1>
   <!-- Navbar goes here-->
   <nav id="navbar">
