--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'kr'}, 'google_translate_element');
     }
     </script>
   <title>BARO LANDING</title>
@@ -31,8 +31,8 @@
       <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
       <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
       <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
-      <li><a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
-      <li><a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
+      <li><a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
+      <li><a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY=" target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
     </ul>
   </nav>
 
@@ -50,8 +50,8 @@
       <li class="navbar__tablet__item"><a href="service.html"><h3>부가 서비스</h3></a></li>
       <li class="navbar__tablet__item"><a href="contact.html"><h3>문의하기</h3></a></li>
       <div class="tablet__social">
-        <a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
-        <a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
+        <a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
+        <a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY="target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
       </div>
       <div class="closebtnCon">
         <i class="fa-solid fa-chevron-up closeBtn"></i>
@@ -125,7 +125,7 @@
               </div>
               <ol class="after__container__down">
                 <li>가구 및 가전제품 구입시 동행</li>
-                <li>식료품 구매 동행 (2회)</li>
+                <li>식료품 구매 동행</li>
               </ol>
             </div>
             <div class="after__container after__tablet">
@@ -160,7 +160,7 @@
                 <h5>각종 관공서 및 서류 관련 서비스 등</h5>
               </div>
               <ol class="after__container__down">
-                <li>은행 계좌 계설</li>
+                <li>은행 계좌 계설, 예약 및 동행</li>
                 <li>SIN 신청 (Working Permit 소시자에 한함)</li>
                 <li>의료보험 신청 (필요시)</li>
                 <li>운전 면허증 교환 시 동행</li>
