--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'kr'}, 'google_translate_element');
     }
     </script>
 </head>
@@ -32,8 +32,8 @@
       <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
       <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
       <li class="navbar__menu__item selectedNav"><a href="contact.html"><h6>문의하기</h6></a></li>
-      <li><a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
-      <li><a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
+      <li><a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
+      <li><a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY=" target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
     </ul>
   </nav>
 
@@ -51,8 +51,8 @@
       <li class="navbar__tablet__item"><a href="service.html"><h3>부가 서비스</h3></a></li>
       <li class="navbar__tablet__item"><a href="contact.html"><h3>문의하기</h3></a></li>
       <div class="tablet__social">
-        <a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
-        <a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
+        <a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
+        <a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY="target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
       </div>
       <div class="closebtnCon">
         <i class="fa-solid fa-chevron-up closeBtn"></i>
