--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'kr'}, 'google_translate_element');
     }
     </script>
 </head>
@@ -30,8 +30,8 @@
         <li class="navbar__menu__item"><a href="introduce.html"><h6>회사소개</h6></a></li>
         <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
         <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
-        <li><a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
-        <li><a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
+        <li><a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
+        <li><a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY=" target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
       </ul>
     </nav>
 
@@ -49,8 +49,8 @@
         <li class="navbar__tablet__item"><a href="service.html"><h3>부가 서비스</h3></a></li>
         <li class="navbar__tablet__item"><a href="contact.html"><h3>문의하기</h3></a></li>
         <div class="tablet__social">
-          <a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
-          <a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
+          <a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
+          <a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY="target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
         </div>
         <div class="closebtnCon">
           <i class="fa-solid fa-chevron-up closeBtn"></i>
@@ -69,10 +69,10 @@
           <a href="index.html"><img src="images/logo_landing.png" alt="Logo"></a>
         </div>
         <p class="tabletDisno"><span>다년간의 정착서비스</span> 노하우와 <span>여러 분야의 전문파트너</span>들과의 협업으로<br>     
-            막막하고 걱정되는 온타리오의 첫 정착에 <span>든든한 친구</span>가 되어드리겠습니다.
+            막막하고 걱정되는 온타리오의 정착에 <span>든든한 첫번째 친구</span>가 되어드리겠습니다.
         </p>
         <p><span>다년간의 정착서비스</span> 노하우와 <span>여러 분야의 전문파트너</span>들과의 협업으로   
-          막막하고 걱정되는 온타리오의 첫 정착에 <span>든든한 친구</span>가 되어드리겠습니다.
+          막막하고 걱정되는 온타리오의 정착에 <span>든든한 첫번째 친구</span>가 되어드리겠습니다.
         </p>
       </div>
       <div class="main__naver__logo">
@@ -82,7 +82,7 @@
 
       <div class="main__tablet__naver">
         <button><a href="about.html"><h4>정착 랜딩 알아보기</h4></a></button>
-        <button><a><h4>NAVER Blog</h4></a></button>
+        <button><a href="https://m.blog.naver.com/ljy6382" target="_blank"><h4>NAVER Blog</h4></a></button>
       </div>
     </section>
 
