--- a/introduce.html
+++ b/introduce.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'kr'}, 'google_translate_element');
     }
     </script>
   <title>BARO LANDING</title>
@@ -31,8 +31,8 @@
       <li class="navbar__menu__item selectedNav"><a href="introduce.html"><h6>회사소개</h6></a></li>
       <li class="navbar__menu__item"><a href="service.html"><h6>부가 서비스</h6></a></li>
       <li class="navbar__menu__item"><a href="contact.html"><h6>문의하기</h6></a></li>
-      <li><a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
-      <li><a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
+      <li><a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a></li>
+      <li><a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY=" target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a></li>
     </ul>
   </nav>
 
@@ -50,8 +50,8 @@
       <li class="navbar__tablet__item"><a href="service.html"><h3>부가 서비스</h3></a></li>
       <li class="navbar__tablet__item"><a href="contact.html"><h3>문의하기</h3></a></li>
       <div class="tablet__social">
-        <a href=""><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
-        <a href=""><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
+        <a href="http://pf.kakao.com/_YTZxbs" target="_blank"><img src="images/kakao_icon.svg" alt="카카오톡 로고"></a>
+        <a href="https://instagram.com/barolanding.canada?igshid=Mzc1MmZhNjY="target="_blank"><img src="images/instagram_icon.svg" alt="인스타그램 로고"></a>
       </div>
       <div class="closebtnCon">
         <i class="fa-solid fa-chevron-up closeBtn"></i>
@@ -88,7 +88,7 @@
           2012년부터 2013년에는 런던카톨릭 스쿨보드 한국어 학교 교장을 맡아 
           4명의 선생님들과 함께 아이들을 가르쳤습니다. 2017년 어느 날 전부터 운영해 오던 
           개인 블로그에 랜딩 서비스 시작을 알렸습니다.
-          그런데 신기하게도 한 분 두 분 연락이 오기 시작했어요. 첫 손님은 캐나다 이민과 런던 정착을 사전 답사를 위해 
+          그런데 신기하게도 한 분 두 분 연락이 오기 시작했어요. 첫 손님은 캐나다 이민과 런던 정착을 사전 답사하기 위해 
           아일랜드 더블린에서 오신 신혼부부셨어요. 랜딩 손님들을 만나며 저는 더 많이 행복해지기 시작했습니다^^
           지금은 랜딩서비스를 할 수 있는 것이 참 감사하고, 기쁘고 행복하게 생활하고 있습니다.
         </h4>
